[package]
name = "parng"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
byteorder = "1.3.4"
libc = "0.2"
flate2 = "1.0.14"

[dev-dependencies]
stb_image = "0.2"
time = "0.2.16"

[build-dependencies]
cc = "1.0.54"

[[example]]
name = "example"
path = "examples/example.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"

